--- a/support/build.gradle
+++ b/support/build.gradle
@@ -13,7 +13,7 @@ dependencies {
   compile 'org.slf4j:jcl-over-slf4j:1.7.5'
   compile 'org.springframework:spring-beans:4.2.2.RELEASE'
   compile 'org.springframework:spring-context:4.2.2.RELEASE'
-  compile 'se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:2.0.0-RC6'
+  compile 'se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:2.0.RC5.1'
   compile 'net.sf.saxon:Saxon-HE:9.6.0-4'
 
   testCompile 'junit:junit:4.12'
