--- a/services/build.gradle
+++ b/services/build.gradle
@@ -4,7 +4,7 @@ dependencies {
   compile project(':common-support')
   compile project(':integration-util')
 
-  compile 'ch.qos.logback:logback-classic:1.0.11'
+  compile 'ch.qos.logback:logback-classic'
   compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.4'
   compile 'joda-time:joda-time:2.2'
   compile 'org.springframework:spring-context:4.2.2.RELEASE'
