--- a/web/build.gradle
+++ b/web/build.gradle
@@ -77,12 +77,12 @@ jar.dependsOn(jsInclude)
 // }
 
 dependencies {
-  compile 'org.webjars:angularjs:1.4.10'
-  compile 'org.webjars:angular-ui-bootstrap:1.3.2'
-  compile 'org.webjars:angular-ui-router:0.2.15'
-  compile 'org.webjars:bootstrap:3.1.1'
-  compile 'org.webjars:momentjs:2.7.0'
-  compile 'org.webjars:jquery:1.9.0'
+  compile 'org.webjars:angularjs'
+  compile 'org.webjars:angular-ui-bootstrap'
+  compile 'org.webjars:angular-ui-router'
+  compile 'org.webjars:bootstrap'
+  compile 'org.webjars:momentjs'
+  compile 'org.webjars:jquery'
 }
 
 buildscript {
