--- a/util/integration-util/build.gradle
+++ b/util/integration-util/build.gradle
@@ -4,7 +4,7 @@ dependencies {
   compile project(':common-support')
   compile project(':logging-util')
 
-  compile 'ch.qos.logback:logback-classic'
+  compile 'ch.qos.logback:logback-classic:1.0.11'
   compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.4'
   compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.4.4'
   compile 'joda-time:joda-time:2.2'
