--- a/web/pom.xml
+++ b/web/pom.xml
@@ -36,7 +36,7 @@
   <properties>
     <sonar.sources>src/main/resources/META-INF/resources/webjars/common</sonar.sources>
     <sonar.javascript.lcov.reportPath>target/karma_coverage/merged_lcov.info</sonar.javascript.lcov.reportPath>
-    <sonar.exclusions>**/templates.js,**/vendor/*</sonar.exclusions>
+    <sonar.exclusions>**/templates.js,**/vendor/**</sonar.exclusions>
   </properties>
 
   <dependencies>
