--- a/util/integration-util/build.gradle
+++ b/util/integration-util/build.gradle
@@ -4,10 +4,8 @@ dependencies {
   compile project(':common-support')
   compile project(':logging-util')
 
-  compile 'ch.qos.logback:logback-classic:1.0.11'
-  compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.4'
-  compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.4.4'
-  compile 'joda-time:joda-time:2.2'
+  compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
+  compile "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${jacksonVersion}"
   compile 'org.apache.cxf:cxf-rt-transports-http:3.1.3'
   compile 'org.springframework:spring-context:4.2.2.RELEASE'
 
