--- a/services/build.gradle
+++ b/services/build.gradle
@@ -4,8 +4,7 @@ dependencies {
   compile project(':common-support')
   compile project(':integration-util')
 
-  compile 'ch.qos.logback:logback-classic:1.0.11'
-  compile 'org.springframework:spring-context:4.2.2.RELEASE'
+  compile "org.springframework:spring-context:${springVersion}"
 
-  testCompile 'org.mockito:mockito-core:1.9.0'
+  testCompile "org.mockito:mockito-core:${mockitoVersion}"
 }
