--- a/util/integration-util/build.gradle
+++ b/util/integration-util/build.gradle
@@ -6,8 +6,8 @@ dependencies {
 
   compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
   compile "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${jacksonVersion}"
-  compile 'org.apache.cxf:cxf-rt-transports-http:3.1.3'
-  compile 'org.springframework:spring-context:4.2.2.RELEASE'
+  compile "org.apache.cxf:cxf-rt-transports-http:${cxfVersion}"
+  compile "org.springframework:spring-context:${springVersion}"
 
-  testCompile 'org.mockito:mockito-core:1.9.0'
+  testCompile "org.mockito:mockito-core:${mockitoVersion}"
 }
