--- a/util/logging-util/build.gradle
+++ b/util/logging-util/build.gradle
@@ -1,11 +1,11 @@
 description = 'Intyg Common (Logging Utility)'
 
 dependencies {
-  compile 'ch.qos.logback:logback-classic:1.0.11'
-  compile 'org.springframework:spring-context:4.2.2.RELEASE'
-  compile 'commons-codec:commons-codec:1.10'
+  compile "ch.qos.logback:logback-classic:${logbackVersion}"
+  compile "org.springframework:spring-context:${springVersion}"
+  compile "commons-codec:commons-codec:1.10"
 
-  compileOnly 'javax.servlet:servlet-api:2.5'
+  compileOnly "javax.servlet:servlet-api:${servletApiVersion}"
 
-  testCompile 'org.mockito:mockito-core:1.9.0'
+  testCompile "org.mockito:mockito-core:${mockitoVersion}"
 }
