--- a/web/build.gradle
+++ b/web/build.gradle
@@ -14,6 +14,8 @@ node {
   version = '0.12.4'
   download = true
   distBaseUrl = 'https://build-inera.nordicmedtest.se/node/'
+  workDir = projectDir
+  nodeModulesDir = projectDir
 }
 
 sourceSets {
