--- a/build-tools/src/main/resources/jshint/.jshintrc
+++ b/build-tools/src/main/resources/jshint/.jshintrc
@@ -32,7 +32,9 @@
 	"phantom": true,
 
     "globals": {
-	
+
+        "JSON": true,
+
 		// other libs
         "angular": false,
         "moment": false,
