--- a/web/build.gradle
+++ b/web/build.gradle
@@ -7,7 +7,7 @@ def webappOutputDir = 'build/'
 def webappTestOutputDir = 'build/karma/'
 
 grunt {
-    colors = System.properties['gruntColors'] ?: true
+    colors = System.properties['gruntColors'] ? System.properties['gruntColors'].toBoolean() : true
 }
 
 node {
