DEVENV: ta bort duplicerade beroenden

--- a/support/build.gradle
+++ b/support/build.gradle
@@ -7,14 +7,9 @@ dependencies {
 
   compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
   compile "com.google.guava:guava:${guavaVersion}"
-  compile "org.apache.commons:commons-lang3:3.1"
-  compile "org.slf4j:jcl-over-slf4j:${slf4jVersion}"
-  compile "net.sf.saxon:Saxon-HE:9.6.0-4"
+  compile "org.apache.commons:commons-lang3:${commonsLangVersion}"
+  compile "net.sf.saxon:Saxon-HE:${saxonVersion}"
   compile "org.springframework:spring-beans:${springVersion}"
   compile "org.springframework:spring-context:${springVersion}"
-  compile("org.springframework:spring-core:${springVersion}") {
-    exclude(module: "commons-logging")
-  }
-
-  testCompile "org.mockito:mockito-core:${mockitoVersion}"
+  compile "org.springframework:spring-core:${springVersion}"
 }
