--- a/util/logging-util/build.gradle
+++ b/util/logging-util/build.gradle
@@ -3,9 +3,7 @@ description = 'Intyg Common (Logging Utility)'
 dependencies {
   compile "ch.qos.logback:logback-classic:${logbackVersion}"
   compile "org.springframework:spring-context:${springVersion}"
-  compile "commons-codec:commons-codec:1.10"
+  compile "commons-codec:commons-codec:${commonsCodecVersion}"
 
   compileOnly "javax.servlet:servlet-api:${servletApiVersion}"
-
-  testCompile "org.mockito:mockito-core:${mockitoVersion}"
 }
