--- a/web/build.gradle
+++ b/web/build.gradle
@@ -56,3 +56,13 @@ task jsInclude(type: NodeTask, dependsOn: [npmInstall]) {
 }
 
 jar.dependsOn(jsInclude)
+
+task jsCodeQuality(type: NodeTask, dependsOn: [npmInstall]) {
+    outputs.upToDateWhen { false }
+
+    script = file('node_modules/grunt-cli/bin/grunt')
+    args = ['lint']
+}
+
+checkstyleMain.dependsOn(jsCodeQuality)
+jsCodeQuality.onlyIf { project.hasProperty('codeQuality') }
