--- a/web/build.gradle
+++ b/web/build.gradle
@@ -59,5 +59,5 @@ task jsCodeQuality(type: NodeTask, dependsOn: [npmInstall]) {
     args = ['lint']
 }
 
-checkstyleMain.dependsOn(jsCodeQuality)
+checkstyleMain.dependsOn jsCodeQuality
 jsCodeQuality.onlyIf { project.hasProperty('codeQuality') }
