--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ buildscript {
         classpath 'org.ajoberstar:gradle-git:1.+'
         classpath 'com.moowork.gradle:gradle-node-plugin:0.+'
         classpath 'com.moowork.gradle:gradle-grunt-plugin:0.+'
+        classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.8'
         classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.+'
     }
 
@@ -87,4 +88,3 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
 }
-
