--- a/codequality.gradle
+++ b/codequality.gradle
@@ -36,6 +36,7 @@ subprojects {
     if (project.hasProperty('codeQuality')) {
         compileJava {
             toolChain net.ltgt.gradle.errorprone.ErrorProneToolChain.create(project)
+            options.compilerArgs += [ '-Xep:TypeParameterUnusedInFormals:ERROR' ]
         }
     }
 
