--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 ext {
     intygInsuranceprocessSchemasVersion = "1.0.4"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
-    rivtaClinicalprocessSchemasVersion = "2.0.RC6.2"
+    rivtaClinicalprocessSchemasVersion = "2.0"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
     rivtaItintegrationMonitoringSchemasVersion = "1.0.0.4"
 
