--- a/ts/ts-diabetes/build.gradle
+++ b/ts/ts-diabetes/build.gradle
@@ -1,4 +1,4 @@
-description = 'Intygstyper (TS Läkarintyg, diabetes)'
+description = 'Intyg Common (TS Läkarintyg, diabetes)'
 
 dependencies {
   compile project(':ts-parent')
