--- a/fk7263/build.gradle
+++ b/fk7263/build.gradle
@@ -7,6 +7,12 @@ dependencies {
     compile project(":common-services")
     compile project(":common-schemas")
 
+    compile "com.itextpdf:itextpdf:${itextVersion}"
+    compile "commons-collections:commons-collections:${commonsCollectionsVersion}"
+    compile "com.helger:ph-schematron:${phSchematronVersion}"
+    compile "org.springframework:spring-tx:${springVersion}"
+
+
     compile "se.inera.intyg.clinicalprocess.healthcond.certificate:intyg-clinicalprocess-healthcond-certificate-schemas:${intygCertificateSchemasVersion}"
     compile "se.skltp.adapterservices.insuranceprocess.healthreporting:FkEintygAdapterIC-validator:${fkEIntygAdapterVersion}"
     compile "se.inera.intyg.clinicalprocess.healthcond.certificate:intyg-clinicalprocess-healthcond-certificate-schematron:${intygClinicalprocessSchematronVersion}"
