--- a/ts/ts-parent/build.gradle
+++ b/ts/ts-parent/build.gradle
@@ -7,6 +7,11 @@ dependencies {
     compile project(":common-services")
     compile project(":common-schemas")
 
+    compile "com.itextpdf:itextpdf:${itextVersion}"
+    compile "commons-collections:commons-collections:${commonsCollectionsVersion}"
+    compile "com.helger:ph-schematron:${phSchematronVersion}"
+    compile "org.springframework:spring-tx:${springVersion}"
+
     compile "se.riv.insuranceprocess.healthreporting:insuranceprocess-healthreporting-schemas:${rivtaInsuranceprocessSchemasVersion}"
     compile "se.inera.intyg.transportstyrelsen:intyg-transportstyrelsen-schemas:${intygTransportstyrelsenSchemasVersion}"
 }
