INTYG-3257: Varje FK/TS xml-textfil har nu en motsvarande .properties-fil med metadataproperties (blankettId, pdfPath etc)

--- a/services/build.gradle
+++ b/services/build.gradle
@@ -3,4 +3,6 @@ description = 'Intyg Common (Services)'
 dependencies {
   compile project(':common-support')
   compile project(':integration-util')
+
+  compile "commons-io:commons-io:${commonsIoVersion}"
 }
