--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'se.inera.intyg:gradle-intyg-plugin:1.0.+'
+        classpath 'se.inera.intyg:gradle-intyg-plugin:1.1-SNAPSHOT'
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.+'
-        classpath 'org.ajoberstar:gradle-git:1.+'
         classpath 'com.moowork.gradle:gradle-node-plugin:0.+'
         classpath 'com.moowork.gradle:gradle-grunt-plugin:0.+'
-        classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.8'
-        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.+'
     }
 }
 
@@ -47,7 +44,6 @@ allprojects {
 
     apply plugin: 'inera-intyg'
     apply plugin: 'maven'
-    apply plugin: 'org.ajoberstar.grgit'
 }
 
 subprojects {
@@ -66,10 +62,12 @@ subprojects {
         testCompile "xmlunit:xmlunit:${xmlUnitVersion}"
     }
 
-    apply plugin: 'java'
-
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
+
+    checkstyle {
+        configProperties = ['package_name': 'common']
+    }
 
     task createVersionPropertyFile(type: VersionPropertyFileTask)
 
