--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'se.inera.intyg:gradle-intyg-plugin:1.0.15'
-        classpath 'com.moowork.gradle:gradle-node-plugin:0.+'
-        classpath 'com.moowork.gradle:gradle-grunt-plugin:0.+'
+        classpath 'se.inera.intyg:gradle-intyg-plugin:1.0.+'
+        classpath 'com.moowork.gradle:gradle-node-plugin:1.1.1'
     }
 }
 
@@ -61,17 +60,6 @@ allprojects {
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
-
-    checkstyle {
-        configProperties = ['package_name': 'common']
-    }
-
-    sonarqube {
-        properties {
-            property "sonar.projectName", "Intyg Common"
-            property "sonar.projectKey", "intyg-common"
-        }
-    }
 
     task createVersionPropertyFile(type: VersionPropertyFileTask)
 
