--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ ext {
     rivtaClinicalprocessSchemasVersion = "2.0.1-beta1"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
 
+    schemasContractVersion = "2.1.4"
+
     autovalueVersion = "1.1"
     cxfVersion = "3.1.3"
     fkEIntygAdapterVersion = "2.2-RC2-INTYG"
