--- a/fk/fk-parent/build.gradle
+++ b/fk/fk-parent/build.gradle
@@ -5,6 +5,8 @@ dependencies {
     compile project(":common-services")
     compile project(":common-schemas")
 
+    compile "se.inera.intyg.schemas:schemas-contract:${schemasContractVersion}"
+
     compile "com.itextpdf:itextpdf:${itextVersion}"
     compile "com.helger:ph-schematron:${phSchematronVersion}"
     compile "org.springframework:spring-tx:${springVersion}"
