--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 ext {
-    intygClinicalprocessSchematronVersion = "0-SNAPSHOT"//"1.0.10"
+    intygClinicalprocessSchematronVersion = "1.0.12"
     intygCertificateSchemasVersion = "1.0.5"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
-    rivtaClinicalprocessSchemasVersion = "0-SNAPSHOT" //"3.0.0-beta4"
+    rivtaClinicalprocessSchemasVersion = "3.0.0-RC2"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
 
     schemasContractVersion = "2.1.4"
