DEVENV: apt-plugin för bättre hantering av autovalue

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ buildscript {
     dependencies {
         classpath 'se.inera.intyg:gradle-intyg-plugin:1.0.+'
         classpath 'com.moowork.gradle:gradle-node-plugin:1.1.1'
+        classpath 'net.ltgt.gradle:gradle-apt-plugin:0.10'
     }
 }
 
@@ -47,6 +48,8 @@ allprojects {
 
     apply plugin: 'inera-intyg'
     apply plugin: 'maven'
+    apply plugin: 'idea'
+    apply plugin: 'net.ltgt.apt'
 
     dependencies {
         testCompile "junit:junit:4.+"
