--- a/fk/fk-parent/build.gradle
+++ b/fk/fk-parent/build.gradle
@@ -6,12 +6,13 @@ dependencies {
     compile project(":common-schemas")
 
     compile "se.inera.intyg.schemas:schemas-contract:${schemasContractVersion}"
+    compile "se.inera.intyg.clinicalprocess.healthcond.certificate:intyg-clinicalprocess-healthcond-certificate-schematron:${intygClinicalprocessSchematronVersion}"
 
     compile "com.itextpdf:itextpdf:${itextVersion}"
     compile "com.helger:ph-schematron:${phSchematronVersion}"
     compile "org.springframework:spring-tx:${springVersion}"
 
-    compile "se.inera.intyg.clinicalprocess.healthcond.certificate:intyg-clinicalprocess-healthcond-certificate-schematron:${intygClinicalprocessSchematronVersion}"
-
     compile "com.google.auto.value:auto-value:${autovalueVersion}"
+
+    apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
