--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ include ':luae_fs'
 include ':ts-parent'
 include ':ts-bas'
 include ':ts-diabetes'
+include ':sos_parent'
 
 project(':logging-util').projectDir = "$rootDir/util/logging-util" as File
 project(':common-support').projectDir = "$rootDir/support" as File
@@ -32,3 +33,4 @@ project(':luae_fs').projectDir = "$rootDir/fk/luae_fs" as File
 project(':ts-parent').projectDir = "$rootDir/ts/ts-parent" as File
 project(':ts-bas').projectDir = "$rootDir/ts/ts-bas" as File
 project(':ts-diabetes').projectDir = "$rootDir/ts/ts-diabetes" as File
+project(':sos_parent').projectDir = "$rootDir/sos/sos_parent" as File
