--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ include ':ts-bas'
 include ':ts-diabetes'
 include ':sos_parent'
 include 'sos_db'
+include 'sos_doi'
 
 project(':logging-util').projectDir = "$rootDir/util/logging-util" as File
 project(':common-support').projectDir = "$rootDir/support" as File
@@ -36,3 +37,4 @@ project(':ts-bas').projectDir = "$rootDir/ts/ts-bas" as File
 project(':ts-diabetes').projectDir = "$rootDir/ts/ts-diabetes" as File
 project(':sos_parent').projectDir = "$rootDir/sos/sos_parent" as File
 project(':sos_db').projectDir = "$rootDir/sos/sos_db" as File
+project(':sos_doi').projectDir = "$rootDir/sos/sos_doi" as File
