INTYG-4196: Konvertering för Dödsbevis

--- a/support/build.gradle
+++ b/support/build.gradle
@@ -9,4 +9,8 @@ dependencies {
   compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
   compile "com.google.guava:guava:${guavaVersion}"
   compile "net.sf.saxon:Saxon-HE:${saxonVersion}"
+
+  compile "com.google.auto.value:auto-value:${autovalueVersion}"
+
+  apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
