--- a/build.gradle
+++ b/build.gradle
@@ -32,16 +32,16 @@ ext {
 }
 
 allprojects {
+    apply plugin: 'se.inera.intyg.plugin.common'
+    apply plugin: 'maven'
+    apply plugin: 'idea'
+    apply plugin: 'net.ltgt.apt'
+
     repositories {
         mavenLocal()
         maven { url "https://build-inera.nordicmedtest.se/nexus/repository/releases/" }
         maven { url "http://repo.maven.apache.org/maven2" }
     }
-
-    apply plugin: 'se.inera.intyg.plugin.common'
-    apply plugin: 'maven'
-    apply plugin: 'idea'
-    apply plugin: 'net.ltgt.apt'
 
     dependencies {
         testCompile "junit:junit:4.+"
@@ -108,7 +108,7 @@ configure(subprojects.findAll {['fk7263', 'ts-bas', 'ts-diabetes', 'lisjp', 'lus
     task unzipBuildTools(type: Copy) {
         into "${rootProject.buildDir}/build-tools/"
         from {
-            def intygJar = project.rootProject.buildscript.configurations.classpath.find { it.name.contains("gradle-intyg") }
+            def intygJar = project.rootProject.buildscript.configurations.classpath.find { it.name.contains("se.inera.intyg.plugin.common") }
             zipTree(intygJar)
         }
     }
