--- a/web/build.gradle
+++ b/web/build.gradle
@@ -54,7 +54,7 @@ jar.dependsOn(jsInclude)
 task unzipBuildTools(type: Copy) {
     into "$buildDir/build-tools/"
     from {
-        def intygJar = project.rootProject.buildscript.configurations.classpath.find { it.name.contains("gradle-intyg") }
+        def intygJar = project.rootProject.buildscript.configurations.classpath.find { it.name.contains("se.inera.intyg.plugin.common") }
         zipTree(intygJar)
     }
 }
