--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,7 @@ allprojects {
     }
 }
 
-configure(subprojects.findAll {['fk7263', 'ts-bas', 'ts-diabetes', 'lisjp', 'luse', 'luae_fs', 'luae_na'].contains(it.name)}) {
+configure(subprojects.findAll {['fk7263', 'ts-bas', 'ts-diabetes', 'lisjp', 'luse', 'luae_fs', 'luae_na', 'doi'].contains(it.name)}) {
     apply plugin: 'com.moowork.grunt'
 
     grunt {
