INTYG-4796: Ny feature för skapa utkast på avliden

--- a/sos/db/src/main/resources/db-features.properties
+++ b/sos/db/src/main/resources/db-features.properties
@@ -25,3 +25,4 @@ utskrift = true
 signeraSkickaDirekt = true
 varnaOmTidigareIntyg = true
 makuleraIntygKraverAnledning = false
+hanteraIntygsutkastAvliden = true
