--- a/sos/doi/src/main/resources/doi-features.properties
+++ b/sos/doi/src/main/resources/doi-features.properties
@@ -25,3 +25,4 @@ utskrift = true
 signeraSkickaDirekt = true
 varnaOmTidigareIntyg = true
 makuleraIntygKraverAnledning = false
+hanteraIntygsutkastAvliden = true
