INTYG-4804: Ersätt KOPIERA_INTYG med FORNYA_INTYG

--- a/sos/db/src/main/resources/db-features.properties
+++ b/sos/db/src/main/resources/db-features.properties
@@ -18,7 +18,7 @@
 #
 
 hanteraIntygsutkast = true
-kopieraIntyg = true
+fornyaIntyg = true
 makuleraIntyg = true
 skickaIntyg = true
 utskrift = true
