--- a/ts/ts-bas/src/main/resources/ts-bas-features.properties
+++ b/ts/ts-bas/src/main/resources/ts-bas-features.properties
@@ -19,7 +19,7 @@
 
 hanteraFragor = false
 hanteraIntygsutkast = true
-kopieraIntyg = true
+fornyaIntyg = true
 makuleraIntyg = true
 skickaIntyg = true
 utskrift = true
