--- a/sos/doi/src/main/resources/doi-features.properties
+++ b/sos/doi/src/main/resources/doi-features.properties
@@ -18,7 +18,7 @@
 #
 
 hanteraIntygsutkast = true
-kopieraIntyg = true
+fornyaIntyg = true
 makuleraIntyg = true
 skickaIntyg = true
 utskrift = true
