INTYG-4893: Nya features för db & doi

--- a/sos/db/src/main/resources/db-features.properties
+++ b/sos/db/src/main/resources/db-features.properties
@@ -23,6 +23,7 @@ makuleraIntyg = true
 skickaIntyg = true
 utskrift = true
 signeraSkickaDirekt = true
-varnaOmTidigareIntyg = true
+uniktIntyg = true
+uniktIntygInomVg = true
 makuleraIntygKraverAnledning = false
 hanteraIntygsutkastAvliden = true
