--- a/sos/doi/src/main/resources/doi-features.properties
+++ b/sos/doi/src/main/resources/doi-features.properties
@@ -23,6 +23,6 @@ makuleraIntyg = true
 skickaIntyg = true
 utskrift = true
 signeraSkickaDirekt = true
-varnaOmTidigareIntyg = true
+uniktIntygInomVg = true
 makuleraIntygKraverAnledning = false
 hanteraIntygsutkastAvliden = true
