--- a/sos/db/src/main/resources/db-features.properties
+++ b/sos/db/src/main/resources/db-features.properties
@@ -26,3 +26,4 @@ signeraSkickaDirekt = true
 uniktIntyg = true
 makuleraIntygKraverAnledning = false
 hanteraIntygsutkastAvliden = true
+takKontroll = true
