--- a/sos/doi/src/main/resources/doi-features.properties
+++ b/sos/doi/src/main/resources/doi-features.properties
@@ -26,3 +26,4 @@ signeraSkickaDirekt = true
 uniktIntygInomVg = true
 makuleraIntygKraverAnledning = false
 hanteraIntygsutkastAvliden = true
+takKontroll = true
