INTYG-4899: Commit för Intyg-4899, 4896, 4897, 4898, 4901

--- a/sos/doi/src/main/resources/doi-features.properties
+++ b/sos/doi/src/main/resources/doi-features.properties
@@ -24,6 +24,7 @@ skickaIntyg = true
 utskrift = true
 signeraSkickaDirekt = true
 uniktIntygInomVg = true
+uniktUtkastInomVg = true
 makuleraIntygKraverAnledning = false
 hanteraIntygsutkastAvliden = true
 takKontroll = true
