--- a/sos/db/src/main/resources/db-features.properties
+++ b/sos/db/src/main/resources/db-features.properties
@@ -24,6 +24,7 @@ skickaIntyg = true
 utskrift = true
 signeraSkickaDirekt = true
 uniktIntyg = true
+uniktUtkastInomVg = true
 makuleraIntygKraverAnledning = false
 hanteraIntygsutkastAvliden = true
 takKontroll = true
