BUILDENV: Uppstädning inför gradle 4.4

--- a/fk/lisjp/build.gradle
+++ b/fk/lisjp/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
-  compile project(':fk-parent')
+    compile project(':fk-parent')
+
+    compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
+    apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
