--- a/sos/db/build.gradle
+++ b/sos/db/build.gradle
@@ -1,3 +1,7 @@
 dependencies {
-  compile project(':sos_parent')
+    compile project(':sos_parent')
+
+    compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
+    apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
+
