--- a/sos/doi/build.gradle
+++ b/sos/doi/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
   compile project(':sos_parent')
+
+    compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
+    apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
