--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ ext {
     autovalueVersion = "1.5"
     cxfVersion = "3.1.3"
     fkEIntygAdapterVersion = "2.2-RC3-INTYG"
-    guavaVersion = "20.0"
+    guavaVersion = "24.1-jre"
     itextVersion = "5.3.2"
     jacksonVersion = "2.8.1"
     logbackVersion = "1.0.11"
