--- a/fk/lisjp/bower.json
+++ b/fk/lisjp/bower.json
@@ -2,29 +2,24 @@
   "name": "lisjp",
   "version": "0.0.0",
   "devDependencies": {
-    "angular": "1.6.6",
-    "angular-animate": "1.6.6",
-    "angular-cookies": "1.6.6",
-    "angular-mocks": "1.6.6",
-    "angular-i18n": "1.6.6",
-    "angular-sanitize": "1.6.6",
+    "jquery": "3.3.1",
+    "angular": "1.6.9",
+    "angular-animate": "1.6.9",
+    "angular-cookies": "1.6.9",
+    "angular-mocks": "1.6.9",
+    "angular-i18n": "1.6.9",
+    "angular-sanitize": "1.6.9",
     "angular-bootstrap": "1.3.3",
     "angular-ui-router": "0.4.2",
     "bootstrap": "3.3.7",
-    "momentjs": "2.7.0",
-    "jquery": "1.9.1"
+    "momentjs": "2.21.0"
   },
   "overrides": {
-    "angular": {
-      "dependencies": {
-        "jquery": "1.9.0"
-      }
-    },
     "angular-i18n": {
       "main": "angular-locale_sv-se.js"
     }
   },
   "resolutions": {
-    "angular": "1.6.6"
+    "angular": "1.6.9"
   }
 }
