--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "intygstyper",
     "version": "0.0.1",
+    "private": true,
     "devDependencies": {
         "grunt": "^1.0.1",
-        "autoprefixer": "^6.7.7",
+        "autoprefixer": "^8.2.0",
         "cssnano": "^3.10.0",
         "grunt-angular-templates": "^1.1.0",
-        "grunt-bower-task": "0.4.0",
+        "grunt-bower-task": "0.5.0",
         "grunt-cli": "^1.2.0",
         "grunt-contrib-concat": "^1.0.1",
         "grunt-contrib-jshint": "^1.0.0",
@@ -16,15 +17,13 @@
         "grunt-ng-annotate": "^2.0.2",
         "grunt-injector": "^1.1.0",
         "grunt-sass": "^1.1.0",
-        "grunt-postcss": "^0.8.0",
-        "grunt-sass-lint": "0.2.0",
-        "grunt-wiredep": "3.0.0",
+        "grunt-postcss": "^0.9.0",
+        "grunt-sass-lint": "0.2.4",
+        "grunt-wiredep": "3.0.1",
         "jasmine-core": "2.5.2",
         "jit-grunt": "0.10.0",
         "karma": "^1.0.0",
-        "karma-chrome-launcher": "^2.0.0",
         "karma-coverage": "^1.1.1",
-        "karma-firefox-launcher": "^1.0.0",
         "karma-jasmine": "^1.0.2",
         "karma-junit-reporter": "^1.1.0",
         "karma-mocha-reporter": "^2.2.0",
