--- a/web/package.json
+++ b/web/package.json
@@ -11,18 +11,18 @@
         "grunt-cli": "^1.2.0",
         "grunt-contrib-concat": "^1.0.1",
         "grunt-contrib-jshint": "^1.0.0",
-        "grunt-contrib-uglify": "^2.0.0",
-        "grunt-karma": "^1.0.0",
+        "grunt-contrib-uglify": "^3.0.0",
+        "grunt-karma": "^2.0.0",
         "grunt-lcov-merge": "^1.2.3",
-        "grunt-ng-annotate": "^2.0.2",
+        "grunt-ng-annotate": "^3.0.0",
         "grunt-injector": "^1.1.0",
-        "grunt-sass": "^1.1.0",
+        "grunt-sass": "^2.1.0",
         "grunt-postcss": "^0.9.0",
         "grunt-sass-lint": "0.2.4",
         "grunt-wiredep": "3.0.1",
-        "jasmine-core": "2.5.2",
+        "jasmine-core": "^3.1.0",
         "jit-grunt": "0.10.0",
-        "karma": "^1.0.0",
+        "karma": "^2.0.0",
         "karma-coverage": "^1.1.1",
         "karma-jasmine": "^1.0.2",
         "karma-junit-reporter": "^1.1.0",
@@ -30,7 +30,6 @@
         "karma-ng-html2js-preprocessor": "^1.0.0",
         "karma-phantomjs-launcher": "^1.0.2",
         "karma-read-json": "^1.1.0",
-        "karma-scss-preprocessor": "^1.0.1",
         "time-grunt": "1.4.0",
         "tv4": "^1.2.7"
     }
