--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ ext {
     intygClinicalprocessSchematronVersion = "1.0.26"
     intygCertificateSchemasVersion = "1.0.9"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
-    rivtaClinicalprocessSchemasVersion = "3.2.0-RC1"
+    rivtaClinicalprocessSchemasVersion = "0-SNAPSHOT" //"3.2.0-RC1"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
 
     schemasContractVersion = "2.1.7"
