--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ plugins {
 
 ext {
     intygClinicalprocessSchematronVersion = "1.0.26"
-    intygCertificateSchemasVersion = "0-SNAPSHOT" //"1.0.9"
+    intygCertificateSchemasVersion = "1.0.10"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
-    rivtaClinicalprocessSchemasVersion = "0-SNAPSHOT" //"3.2.0-RC1"
+    rivtaClinicalprocessSchemasVersion = "3.2.0-RC2"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
 
     schemasContractVersion = "2.1.7"
